gestion user et sécurité ok

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "jquery": "^3.4.1",
     "moment": "^2.27.0",
     "ng2-pdf-viewer": "^6.3.0",
+    "ngx-pagination": "^5.0.0",
     "ngx-select-ex": "^4.0.0",
     "ngx-spinner": "^9.0.2",
     "ngx-toastr": "^12.0.1",
